--- a/Demo_app/build.gradle
+++ b/Demo_app/build.gradle
@@ -13,7 +13,7 @@ android {
     minSdkVersion 18
     targetSdkVersion 23
     versionCode 1
-    versionName "0.0.1-SNAPSHOT"
+    versionName "0.0.2-framework-SNAPSHOT"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
   //noinspection GroovyAssignabilityCheck
@@ -39,6 +39,7 @@ dependencies {
   compile 'com.android.support:support-v4:23.1.1'
   compile 'com.android.support:appcompat-v7:23.1.1'
   compile 'com.android.support:recyclerview-v7:23.1.1'
+  compile 'org.lathanh.android:mvp:0.1'
 
   //-- Automated Testing ----------------------------------------------------
   androidTestCompile 'com.android.support.test:runner:0.4.1'
