--- a/Demo_app/build.gradle
+++ b/Demo_app/build.gradle
@@ -1,31 +1,20 @@
-buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.1'
-    classpath "com.android.databinding:dataBinder:1.0-rc1"
-  }
-}
 repositories {
   mavenLocal()
-  jcenter()
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.android.databinding'
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "23.0.2"
+  buildToolsVersion "23.0.3"
 
   defaultConfig {
-    applicationId "org.lathanh.demo.android.mvp"
-      minSdkVersion 18
-      targetSdkVersion 23
-      versionCode 1
-      versionName "0.0.1-SNAPSHOT"
-      testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    applicationId "org.lathanh.demo.android.mvp"  
+    minSdkVersion 18
+    targetSdkVersion 23
+    versionCode 1
+    versionName "0.0.1-SNAPSHOT"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
   //noinspection GroovyAssignabilityCheck
   configurations.all {
@@ -40,6 +29,9 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
+  dataBinding {
+    enabled = true
   }
 }
 
