--- a/Demo_app/build.gradle
+++ b/Demo_app/build.gradle
@@ -1,16 +1,19 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.3"
+  namespace 'org.lathanh.demo.android.mvp'
+  compileSdk 33
 
   defaultConfig {
-    applicationId "org.lathanh.demo.android.mvp"  
-    minSdkVersion 18
-    targetSdkVersion 23
+    applicationId "org.lathanh.demo.android.mvp"
+    minSdk 18
+    targetSdk 33
     versionCode 1
-    versionName "0.0.1-SNAPSHOT"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    versionName "0.0.2-SNAPSHOT"
+
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
   }
   //noinspection GroovyAssignabilityCheck
   configurations.all {
@@ -23,7 +26,7 @@ android {
   buildTypes {
     release {
       minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
   }
   dataBinding {
@@ -32,12 +35,12 @@ android {
 }
 
 dependencies {
-  compile 'com.android.support:support-v4:23.1.1'
-  compile 'com.android.support:appcompat-v7:23.1.1'
-  compile 'com.android.support:recyclerview-v7:23.1.1'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'androidx.appcompat:appcompat:1.5.1'
+  implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
   //-- Automated Testing ----------------------------------------------------
-  androidTestCompile 'com.android.support.test:runner:0.4.1'
-  androidTestCompile 'com.android.support.test:rules:0.4.1'
-  androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+  androidTestImplementation 'androidx.test:rules:1.4.0'
+  androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 }
